kustomize/overlays/flagger/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silly-demo
  labels:
    app: silly-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:8080;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: silly-demo
           port:
             number: 8080
    host: myapp.canary.test
